--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "liveServer.settings.multiRootWorkspaceName": "dev",
-    "ros.distro": "noetic"
+    "ros.distro": "noetic",
+    "liveServer.settings.port": 5501
 }
